Added Presentation btns for projects

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             <div class="card-footer">
                 <a href="https://team4-movie-explorer.vercel.app/" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Live Demo</a>
                 <a href="https://github.com/trangtrieu-code/MovieExplorer" target="_blank" rel="noopener noreferrer" class="btn btn-outline-secondary">GitHub</a>
+                <a href="assets/MovieExplorer.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-info">Presentation</a>
             </div>
             </div>
         </div>
@@ -110,6 +111,7 @@
             </div>
             <div class="card-footer">
                 <a href="https://github.com/DavidDems/Team2PropExchange" target="_blank" rel="noopener noreferrer" class="btn btn-outline-secondary">GitHub</a>
+                <a href="assets/PropExchange.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-info">Presentation</a>
             </div>
             </div>
         </div>
@@ -150,6 +152,7 @@
             </div>
             <div class="card-footer">
                 <a href="https://github.com/RIDagher/animal-shelter-spring" target="_blank" rel="noopener noreferrer" class="btn btn-outline-secondary">GitHub</a>
+                <a href="assets/AnimalShelterManagementSystem.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-info">Presentation</a>
             </div>
             </div>
         </div>
