--- a/index.html
+++ b/index.html
@@ -97,10 +97,30 @@
             </div>
             </div>
         </div>
+        <div class="col-md-6">
+            <div class="card h-100 shadow-sm">
+            <img src="assets/images/TheSideline.png" class="card-img-top" alt="Project 2" height="320">
+            <div class="card-body">
+                <h5 class="card-title">Twitter Clone</h5>
+                <p class="card-text">Twitter clone using React + Vite, Python FastAPI, and MySQL. Responsive and mobile-friendly.</p>
+            </div>
+            <div class="d-flex flex-wrap gap-2 pt-2 pb-3 px-2">
+                <span class="badge bg-info text-dark">React</span>
+                <span class="badge bg-teal text-white">Tailwind CSS</span>
+                <span class="badge bg-dark">FastAPI</span>
+                <span class="badge bg-warning text-dark">React Router</span>
+                <span class="badge bg-secondary">MySQL</span>
+            </div>
+            <div class="card-footer">
+                <a href="https://thesideline.daviddems.ca/" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Live Demo</a>
+                <a href="assets/TheSideline.pdf" target="_blank" rel="noopener noreferrer" class="btn bg-darkblue text-white">Presentation</a>
+            </div>
+            </div>
+        </div>
         <!-- Project 2 -->
         <div class="col-md-6">
             <div class="card h-100 shadow-sm">
-            <img src="assets/images/Realtor.png" class="card-img-top" alt="Project 2" height="320">
+            <img src="assets/images/Realtor.png" class="card-img-top" alt="Project 3" height="320">
             <div class="card-body">
                 <h5 class="card-title">Realtor Website</h5>
                 <p class="card-text">A PHP & MySQL real estate site with dynamic listings, contact forms, and a mobile-first UI. Built with HTML, CSS, and vanilla PHP for full-stack functionality.</p>
@@ -122,7 +142,7 @@
         <!-- Project 3 -->
         <div class="col-md-6">
             <div class="card h-100 shadow-sm">
-            <img src="assets/images/portfolio.png" class="card-img-top" alt="Project 3" height="320">
+            <img src="assets/images/portfolio.png" class="card-img-top" alt="Project 4" height="320">
             <div class="card-body">
                 <h5 class="card-title">Personal Portfolio</h5>
                 <p class="card-text">A responsive, single-page portfolio built with HTML, CSS, Bootstrap, and JavaScript. Showcases projects, skills, and contact info with smooth scrolling and a clean UI.</p>
@@ -142,7 +162,7 @@
         <!-- Project 4 -->
         <div class="col-md-6">
             <div class="card h-100 shadow-sm">
-            <img src="assets/images/animal-shelter.png" class="card-img-top" alt="Project 4" height="320">
+            <img src="assets/images/animal-shelter.png" class="card-img-top" alt="Project 5" height="320">
             <div class="card-body">
                 <h5 class="card-title">Animal Shelter</h5>
                 <p class="card-text">An application built with JavaFX and Spring Boot for managing animals, adoptions, volunteers, and medical records. Features include a user-friendly UI, 
